# termfleet

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  DESIGN.md  HANDOFF.md  LICENSE  MASTER_PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  run-browser-review.sh  run-dev.sh  run-native-vte-dev.sh  run-release.sh
docs/: control-surface.md  headless-vt-canvas-plan-perplexity-query.md  native-terminal-pane-architecture.md  recoverable-terminal-architecture.md  recoverable-terminal-perplexity-queries.md  regression-matrix.md  tc-054-agent-autoresume-design.md  terminal-cockpit-design-contract.md  terminal-cockpit-user-flow.md  terminal-latency-perplexity-query.md  terminal-renderer-decision-perplexity-query.md  terminal-transport-failure-recovery.md  visual-qa-review.md
fixtures/: canvas-regression.json
scripts/: agent-provider-adapter.sh  agent-status-summary-ollama.mjs  agent-status-summary-server.mjs  agent-status-summary-sidecar.mjs  analyze-native-vte-pixel-latency.py  capture-cockpit.mjs  capture-native-vte-pixel-latency.py  cockpit-snapshot.mjs  export-evidence-bundle.mjs  generate-emoji-data.mjs  install-reaper-timer.sh  monitor-cockpit-tasks.mjs  recover-sessions.py  render-icon.mjs  summarize-native-vte-latency-trace.mjs  summarize-terminal-latency-trace.mjs  tauri-dev-with-status.sh  termfleet-claude-status-hook.mjs  termfleet-codex-status-hook.mjs  termfleet-doctor.mjs  termfleet-gate.mjs  termfleet-guardrail-ensure.mjs  termfleet-reaper.mjs  termfleetctl.mjs  verify-agent-provider-adapter-headless.sh  verify-agent-restore-visible.sh  verify-agent-status-summary-server.mjs  verify-ask-user-question-live.sh  verify-bracketed-paste.sh  verify-canvas-live.sh  verify-canvas-terminal.sh  verify-clipboard-all-launchers.sh  verify-clipboard-paste.sh  verify-cockpit-target.mjs  verify-daemon-latency.mjs  verify-daemon-survives-restart.sh  verify-developer-preview.mjs  verify-evidence-bundle.mjs  verify-legacy-prompt-repair.sh  verify-map-shell-anchor.sh  (+35 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bidi.rs  commands.rs  daemon.rs  daemon_ipc.rs  default_shell.rs  gtk_keys.rs  lib.rs  main.rs  native_gtk_pane.rs  native_terminal.rs  native_vte.rs  platform_paths.rs  platform_process.rs  platform_tty.rs  pty.rs  search.rs  vt_grid.rs
src-tauri/tests/: daemon_survival.rs  grid_live.rs
tests/: agent-narration.spec.ts  agent-provider-identity.spec.ts  agent-status-end-to-end.spec.ts  agent-status-local-sidecar.spec.ts  agent-status-sidecar.spec.ts  agent-status-summary.spec.ts  agent-workstream.spec.ts  app-shell.spec.ts  badge-regression.spec.ts  box-glyph.spec.ts  canvas-node-reorder.spec.ts  canvas-renderer.spec.ts  cockpit-sidecar-corpus.spec.ts  codex-status-hook.spec.ts  daemon-input-queue.spec.ts  emoji-picker.spec.ts  fractional-dpr-pitch.spec.ts  grid-cursor-dirty.spec.ts  grid-diff-legacy.spec.ts  grid-diff.spec.ts  grid-resize.spec.ts  header-project-label.spec.ts  header-real-task-title.spec.ts  immersive-sidebar.spec.ts  keymap.spec.ts  legacy-prompt-repair.spec.ts  localhost-preview.spec.ts  map-node-filters.spec.ts  map-terminal-latency.spec.ts  map-terminal-rendering.spec.ts  operations-rail.spec.ts  paste-bracketing.spec.ts  paste-image-decision.spec.ts  poll-targets-coverage.spec.ts  project-emoji.spec.ts  project-rail.spec.ts  project-reconciliation.spec.ts  project-sidebar-model.spec.ts  search-overlay.spec.ts  (+29 more)
(+113 files in other folders)
