[package]
name = "terminal-workspace"
version = "0.1.0"
description = "Terminal Workspace Manager"
authors = []
edition = "2021"
default-run = "terminal-workspace"

[features]
default = []

[lib]
name = "terminal_workspace_lib"
crate-type = ["rlib"]

[[bin]]
name = "terminal-workspace-daemon"
path = "src/bin/terminal-workspace-daemon.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
alacritty_terminal = "0.25"
unicode-bidi = "0.3"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

# Linux only: we hook the GTK window's key-press-event to stop WebKitGTK from
# eating Tab/Shift+Tab for focus-traversal before the webview's JS can see them
# (proven: those keydowns never reach JS, so the terminal's back-tab was lost).
# Versions pinned to what tauri 2.11 / wry 0.55 already resolve, so no new tree.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
